[gd_scene load_steps=36 format=2]

[ext_resource path="res://tiles.tres" type="TileSet" id=1]
[ext_resource path="res://player1.png" type="Texture" id=2]
[ext_resource path="res://player.gd" type="Script" id=3]
[ext_resource path="res://ob2.tscn" type="PackedScene" id=4]
[ext_resource path="res://ob1.tscn" type="PackedScene" id=5]
[ext_resource path="res://ob3.tscn" type="PackedScene" id=6]
[ext_resource path="res://ob4.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene_transition_rect.tscn" type="PackedScene" id=8]
[ext_resource path="res://world.gd" type="Script" id=9]
[ext_resource path="res://data_canvas.tscn" type="PackedScene" id=10]
[ext_resource path="res://ob5.tscn" type="PackedScene" id=11]
[ext_resource path="res://ob6.tscn" type="PackedScene" id=12]
[ext_resource path="res://ob7.tscn" type="PackedScene" id=13]
[ext_resource path="res://ob8.tscn" type="PackedScene" id=14]
[ext_resource path="res://cloud.gd" type="Script" id=15]
[ext_resource path="res://cloud_night.png" type="Texture" id=16]
[ext_resource path="res://moon.png" type="Texture" id=17]
[ext_resource path="res://moon.gd" type="Script" id=18]
[ext_resource path="res://coin.tscn" type="PackedScene" id=19]
[ext_resource path="res://action_button.png" type="Texture" id=20]
[ext_resource path="res://action_button_pressed.png" type="Texture" id=21]
[ext_resource path="res://sky.gd" type="Script" id=22]
[ext_resource path="res://scratch sfx.ogg" type="AudioStream" id=23]
[ext_resource path="res://coin sfx.ogg" type="AudioStream" id=24]
[ext_resource path="res://jump sfx.ogg" type="AudioStream" id=25]
[ext_resource path="res://slide sfx.ogg" type="AudioStream" id=26]
[ext_resource path="res://y2mate.com - Jet Grind Radio Soundtrack  Miller Ball Breakers (1).ogg" type="AudioStream" id=27]

[sub_resource type="Animation" id=1]
resource_name = "cycle"
length = 18.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.7, 5.5, 7.6, 8.6, 9.9, 13.4, 15.7, 16.7, 18.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0156863, 0.00392157, 0.141176, 1 ), Color( 0, 0, 0.0392157, 1 ), Color( 0.0156863, 0.00392157, 0.141176, 1 ), Color( 0.0352941, 0.00784314, 0.419608, 1 ), Color( 0.184314, 0.145098, 0.721569, 1 ), Color( 0.25098, 0.823529, 1, 1 ), Color( 1, 0.968627, 0.505882, 1 ), Color( 1, 0.65098, 0.396078, 1 ), Color( 0.905882, 0.211765, 0, 1 ), Color( 0.105882, 0.0392157, 0.803922, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 16 )

[sub_resource type="Animation" id=3]
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43 ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}

[sub_resource type="Animation" id=5]
length = 0.51
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30 ]
}

[sub_resource type="Animation" id=6]
length = 0.65
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=7]
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63 ]
}

[sub_resource type="SegmentShape2D" id=8]
a = Vector2( 8, -16 )
b = Vector2( 8, 16 )

[node name="world" type="Node2D"]
script = ExtResource( 9 )
ob1 = ExtResource( 5 )
ob2 = ExtResource( 4 )
ob3 = ExtResource( 6 )
ob4 = ExtResource( 7 )
ob5 = ExtResource( 11 )
ob6 = ExtResource( 12 )
ob7 = ExtResource( 13 )
ob8 = ExtResource( 14 )
coin = ExtResource( 19 )

[node name="scratch_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 23 )

[node name="coin_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -4.561

[node name="sky" type="ColorRect" parent="."]
modulate = Color( 0.0156863, 0.00392157, 0.141176, 1 )
margin_left = -32.0
margin_top = -88.0
margin_right = 384.0
margin_bottom = 160.0
mouse_filter = 2
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sky_anim" type="AnimationPlayer" parent="sky"]
method_call_mode = 1
anims/cycle = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 160, 80 )
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true

[node name="moon" type="Sprite" parent="."]
position = Vector2( 360, 64 )
scale = Vector2( 0.625, 0.625 )
texture = ExtResource( 17 )
script = ExtResource( 18 )

[node name="cloud" type="Sprite" parent="."]
position = Vector2( 352, 0 )
scale = Vector2( 0.687499, 0.6875 )
texture = ExtResource( 16 )
script = ExtResource( 15 )

[node name="cloud2" type="Sprite" parent="."]
position = Vector2( 488, 22 )
scale = Vector2( 0.687499, 0.6875 )
texture = ExtResource( 16 )
script = ExtResource( 15 )

[node name="cloud3" type="Sprite" parent="."]
position = Vector2( 184, -40 )
scale = Vector2( 0.687499, 0.6875 )
texture = ExtResource( 16 )
script = ExtResource( 15 )

[node name="stars" type="CPUParticles2D" parent="."]
position = Vector2( 152, 40 )
amount = 10
lifetime = 5.0
emission_shape = 2
emission_rect_extents = Vector2( 128, 50 )
gravity = Vector2( -1, 0 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( 0, 128 )
tile_set = ExtResource( 1 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( 65535, 3, 0, 0, 2, 0, 1, 3, 0, 2, 2, 0, 3, 3, 0, 4, 2, 0, 5, 3, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 32, 128 )
collision_layer = 35
collision_mask = 35
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="player"]
texture = ExtResource( 2 )
hframes = 20
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
scale = Vector2( 0.9, 1 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
anims/fall = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/run = SubResource( 6 )
anims/slide = SubResource( 7 )

[node name="wall_detector" type="Area2D" parent="player"]
modulate = Color( 1, 1, 0, 1 )
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/wall_detector"]
position = Vector2( 1, 0 )
scale = Vector2( 1, 0.9 )
shape = SubResource( 8 )

[node name="jump_sfx" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 25 )
volume_db = 1.825
pitch_scale = 1.2

[node name="slide_sfx" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 26 )
volume_db = -23.489

[node name="floor_sprite" type="Sprite" parent="."]
pause_mode = 1
__meta__ = {
"_edit_group_": true
}

[node name="scene_transition_rect" parent="." instance=ExtResource( 8 )]
margin_right = 320.0
margin_bottom = 160.0

[node name="score_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="data_canvas" parent="." instance=ExtResource( 10 )]

[node name="up" type="TouchScreenButton" parent="data_canvas"]
position = Vector2( 16, 111 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 20 )
pressed = ExtResource( 21 )

[node name="down" type="TouchScreenButton" parent="data_canvas"]
position = Vector2( 16, 240 )
scale = Vector2( 1.5, -1.5 )
normal = ExtResource( 20 )
pressed = ExtResource( 21 )

[node name="spawn_ob" type="Timer" parent="."]
wait_time = 1.8
autostart = true

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="coin" parent="." instance=ExtResource( 19 )]
position = Vector2( -32, -32 )

[node name="ob5" parent="." instance=ExtResource( 11 )]
position = Vector2( -40, -62 )
priority = 1.0

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
volume_db = -14.312

[connection signal="body_entered" from="player/wall_detector" to="player" method="_on_wall_detector_body_entered"]
[connection signal="body_entered" from="player/wall_detector" to="." method="_on_wall_detector_body_entered"]
[connection signal="timeout" from="score_timer" to="." method="_on_score_timer_timeout"]
[connection signal="pressed" from="data_canvas/up" to="player" method="_on_up_pressed"]
[connection signal="released" from="data_canvas/up" to="player" method="_on_up_released"]
[connection signal="pressed" from="data_canvas/down" to="player" method="_on_down_pressed"]
[connection signal="released" from="data_canvas/down" to="player" method="_on_down_released"]
[connection signal="timeout" from="spawn_ob" to="." method="_on_spawn_ob_timeout"]
[connection signal="body_entered" from="coin" to="." method="_on_coin_body_entered"]
[connection signal="input_event" from="ob5" to="." method="_on_ob5_input_event"]
